@@ -21,7 +21,8 @@
     "mongodb": "2.0.45",
     "mongoose": "4.1.10",
     "markdown-js": "0.0.3",
-    "qr-image": "~2.0.0"
+    "qr-image": "~2.0.0",
+    "numeral": "~2.0.6"
   },
   "devDependencies": {
     "jasmine": "~2.1.0"
